# country-boundaries-rust

./: .gitignore  Cargo.toml  README.md
.cargo-husky/hooks/: pre-push
.github/workflows/: ci.yml  rust.yml
bench/: Cargo.toml
bench/src/: main.rs
data/: boundaries360x180.ser  boundaries60x30.ser
generator/: Cargo.toml
generator/src/: compare.rs  geojson_reader.rs  main.rs  osm_reader.rs  tests.rs
generator/tests/: integration_test.rs
src/: bbox.rs  cell.rs  deserializer.rs  error.rs  latlon.rs  lib.rs  multipolygon.rs
src/cell/: multipolygon.rs  point.rs
src/utils/: mod.rs
tests/: benchmark.rs  integration_test.rs
