[package]
name = "country-boundaries"
version = "0.1.0"
edition = "2021"
description = "A fast offline reverse country geocoder"
authors = ["Tobias Zwick"]
license = "Apache-2.0"
repository = "https://github.com/westnordost/country-boundaries-rust/"
categories = ["internationalization"]
keywords = ["geocoding", "openstreetmap"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"

[dev-dependencies]
cargo-husky = { version = "1", features = ["user-hooks"], default-features = false }
