[package]
name = "country-boundaries"
version = "1.0.0"
edition = "2021"
description = "A fast offline reverse country geocoder"
authors = ["Tobias Zwick"]
license = "Apache-2.0"
repository = "https://github.com/westnordost/country-boundaries-rust/"
categories = ["internationalization"]
keywords = ["geocoding", "openstreetmap"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "bench",
]
