[package]
name = "country-boundaries"
version = "1.0.0"
edition = "2021"
description = "A fast offline reverse country geocoder"
authors = ["Tobias Zwick"]
license = "Apache-2.0"
repository = "https://github.com/westnordost/country-boundaries-rust/"
categories = ["internationalization"]
keywords = ["geocoding", "openstreetmap"]

[features]
default = []

# When using any of these features, you have to comply with the terms of the ODbl license.
# You must mention that the data your code uses is attributed to OpenStreetMap contributors:
#
#     The source data is licensed (c) OpenStreetMap contributors, OpenDatabase License 1.0
#
with_ODBL_licensed_OSM_data_low = ["lazy_static"]
with_ODBL_licensed_OSM_data_mid = ["lazy_static"]
with_ODBL_licensed_OSM_data_high = ["lazy_static"]

[dependencies]
lazy_static = { version = "1.4.0", optional = true }

[workspace]
members = [
    "bench",
]
